<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_dishes">

    <fragment
        android:id="@+id/navigation_all_dishes"
        android:name="com.example.recipeapp.view.fragments.AllRecipesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_alldishes" />

    <fragment
        android:id="@+id/navigation_favorite_dishes"
        android:name="com.example.recipeapp.view.fragments.FavoriteDishesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favorite_dish" />

    <fragment
        android:id="@+id/navigation_random_dishes"
        android:name="com.example.recipeapp.view.fragments.RandomDishFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_random_dish" />
</navigation>